--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "url": "https://github.com/s14k51/cz-adapter-ruby/issues"
   },
   "scripts": {
-    "lint": "eslint .",
-    "pretest": "rimraf coverage",
-    "test": "jest"
+    "lint": "eslint ."
   },
   "dependencies": {
     "chalk": "^4.0.0",
@@ -29,13 +27,10 @@
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
-    "@types/jest": "25.2.1",
     "commitlint-config-ruby": "2.2.0",
     "eslint": "6.8.0",
     "eslint-config-ruby": "1.7.2",
     "husky": "4.2.5",
-    "jest": "25.4.0",
-    "jest-preset-ruby": "1.0.0",
     "rimraf": "3.0.2"
   },
   "engines": {
