feat: update conventional types

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cz-adapter-ruby",
   "description": "Customized fork of cz-conventional-changelog",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "src/index.js",
   "files": [
@@ -21,17 +21,17 @@
     "test": "echo \"No tests\" && exit 0"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "conventional-ruby-commit-types": "^1.1.0",
+    "chalk": "^4.1.0",
+    "conventional-ruby-commit-types": "^3.0.0",
     "longest": "^2.0.1",
     "word-wrap": "^1.2.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "commitlint-config-ruby": "2.2.0",
-    "eslint": "6.8.0",
+    "@commitlint/cli": "^11.0.0",
+    "commitlint-config-ruby": "^3.0.0",
+    "eslint": "^7.10.0",
     "eslint-config-ruby": "1.7.2",
-    "husky": "4.2.5",
+    "husky": "^4.3.0",
     "rimraf": "3.0.2"
   },
   "engines": {
